--- a/Views/Groups/Create.cshtml
+++ b/Views/Groups/Create.cshtml
@@ -16,31 +16,36 @@
 
 }
 
+<style>
+
+</style>
+
 <form asp-action="Create">
     <div class="form-group">
         <label asp-for="Number">Номер группы</label>
-        <input asp-for="Number" class="form-control" placeholder="Например: 731"/>
+        <input asp-for="Number" class="form-control" placeholder="Например: 731" />
         <span asp-validation-for="Number" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="CadetsNumber">Количество курсантов</label>
-        <input asp-for="CadetsNumber" class="form-control" placeholder="Например: 21"/>
+        <input asp-for="CadetsNumber" class="form-control" placeholder="Например: 21" />
         <span asp-validation-for="CadetsNumber" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Speciality">Выбрать специальность</label>
-        <select asp-for="SpecialityId" class="form-control" asp-items="@(new SelectList(ViewBag.Specialities, "Id", "Title"))">
+        <select asp-for="SpecialityId" class="form-control"
+            asp-items="@(new SelectList(ViewBag.Specialities, "Id", "Title"))">
             <option value="">Выбрать специальность</option>
         </select>
 
         <span asp-validation-for="Speciality" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Создать</button>
+    <button type="submit" class="btn btn-outline-success mt-3">Создать</button>
 </form>
 
 <div>
-    <a asp-action="Index">Вернуться к списку</a>
+    <a class="btn btn-outline-secondary btn-sm mt-3" asp-action="Index"><i class="fa-solid fa-arrow-left"></i> Вернуться к списку</a>
 </div>
 
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
