--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,7 +1,24 @@
 @model IEnumerable<Project.Models.User>
-
+@{
+    ViewData["Title"] = "Список пользователей";
+}
 <h2>Список пользователей</h2>
+<button onclick="history.back()" class="mb-3 mt-3 btn btn-outline-secondary btn-sm"><i class="fa-solid fa-arrow-left"></i> Назад</button>
 
+<form method="get" asp-action="Index">
+    <div class="input-group mb-3">
+        @if (ViewBag.SearchString != null)
+        {
+            <input type="text" name="searchString" class="form-control" placeholder="Поиск по имени пользователя"
+                value="@ViewBag.SearchString" />
+        }
+        else
+        {
+            <input type="text" name="searchString" class="form-control" placeholder="Поиск по имени пользователя" />
+        }
+        <button class="btn btn-primary" type="submit">Поиск</button>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -10,6 +27,7 @@
             <th>Фамилия</th>
             <th>Отчество</th>
             <th>Номер группы</th>
+            <th>Номер семестра</th>
             <th>Роль</th>
             <th>Действия</th>
         </tr>
@@ -23,9 +41,11 @@
                 <td>@user.LastName</td>
                 <td>@user.FatherName</td>
                 <td>@user.GroupNumber</td>
+                <td>@user.CurrentSemester</td>
                 <td>@user.Role.ToString()</td> <!-- Отображаем роль пользователя -->
                 <td>
-                    <a asp-controller="Admin" asp-action="EditRoles" asp-route-userId="@user.Id" class="btn btn-warning">Редактировать роли</a>
+                    <a asp-controller="Admin" asp-action="EditRoles" asp-route-userId="@user.Id"
+                        class="btn btn-warning">Редактировать роли</a>
                 </td>
             </tr>
         }
