--- a/Views/SpecialityTable/Index.cshtml
+++ b/Views/SpecialityTable/Index.cshtml
@@ -1,5 +1,7 @@
 @model IEnumerable<Project.Areas.Admin.Models.Parser.Speciality>
-
+@{
+    ViewData["Title"] = "Список специальностей";
+}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -25,6 +27,7 @@
 </head>
 <body>
     <h1>Список Специальностей</h1>
+    <button onclick="history.back()" class="mb-3 mt-3 btn btn-outline-secondary btn-sm"><i class="fa-solid fa-arrow-left"></i> Назад</button>
     <table border="1">
         <thead>
             <tr>
@@ -61,9 +64,6 @@
             }
         </tbody>
     </table>
-    <div>
-        <p>Группы: <a href="Groups">перейти</a></p>
-    </div>
     <p>Всего Специальностей: @Model.Count()</p> <!-- Общее количество специальностей -->
 </body>
 </html>
